CIV-9298 revert Element list